--- a/index.html
+++ b/index.html
@@ -1,27 +1,90 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <link rel=StyleSheet href="index.css" type="text/css" media="screen , print">
-    <title>KENYA | MUSIC</title>
-    SWIRL THE HIPS
-  </head>
-  <div id="main-div">
-    <body>
-      <nav><!-- main navigation-->
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Music</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contacts</a></li>
-        </ul>
-      </nav>
-      <section>
-        <article>
-          <p>
-            Build on the basic template above with Bootstrap's many components. We encourage you to customize and adapt Bootstrap to suit your individual project's needs.
-          </p>
-        </article>
-      </section>
-    </body>
-   
-  </div>
+<head>
+	<title>Technology Today</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width">
+	<!--<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>-->
+	<link rel="stylesheet" href="index.css" type="text/css" />
+	<script src="js/jquery.js"></script>
+	<script>
+		//Choose if you want the window width to display - 1 = yes, 0 = no
+		var showWidth = 1;
+		
+		if(showWidth == 1){
+        	$(document).ready(function (){
+            	$(window).resize(function(){
+                	var width = $(window).width();
+                	document.getElementById("output_width").innerHTML='Window Width:'+width.toString();
+           		});
+        	});
+		}
+    </script>
+</head>
+<body>
+ <div id="output_width"></div><!--Widow width inserted here-->
+	<div id="container">
+	<header class="main-header">
+		<img id="logo" src="images/logo.png" alt="Responsive Design" />
+		<nav class="main-nav">
+			<ul>
+				<li><a class="active" href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+				<li><a href="#">Hardware</a></li>
+				<li><a href="#">Software</a></li>
+				<li><a href="#">companies</a></li>
+				<li><a href="#">Offshelf</a></li>
+				<li><a href="#">Opensource</a></li>
+        <li><a href="#">Contact Us</a></li>
+			</ul>
+		</nav><!--./main-nav-->
+	</header><!--./main-header-->
+	<div id="main">
+		<div id="content">
+			<article class="art1">
+				<header class="art-header">
+					<h2 class="title"><a href="#">First Post</a></h2>
+					<span>Created byisaac njoki</span>
+				</header><!--./art-header-->
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus arcu est, lacinia et nisi nec, vehicula pretium magna. Nulla ut nisl vel lorem posuere aliquam a feugiat sapien. Suspendisse tincidunt mauris at consequat ornare. Donec condimentum consequat felis a sodales. Donec vestibulum imperdiet nisl id vulputate.   </p>
+					<p>Aenean in tellus ut nibh dignissim adipiscing nec eget libero. Donec eu diam quam. Sed fermentum elementum ultrices. Aliquam erat volutpat. Integer sollicitudin lacus quis est elementum tincidunt. Praesent mattis, felis a hendrerit tempus, risus orci mollis massa, a porta lorem libero id purus.  </p>
+					<a class="readmore" href="#">Read more</a>
+			</article><!--./art1-->
+			<article class="art1">
+				<header class="art-header">
+					<h2 class="title"><a href="#">Second Post</a></h2>
+					<span>Created by: isaac njoki on October 3, 2013</span>
+				</header><!--./art-header-->
+					<p>In in rutrum sapien. Ut tellus nibh, facilisis faucibus pulvinar vitae, sagittis at orci. In sem tellus, faucibus non eros sit amet, tincidunt dictum ligula. Fusce ornare sodales nisi, non aliquet lacus rutrum in. Vestibulum in sem urna. Cras commodo massa enim, non hendrerit lacus pretium vel. </p>
+					<p>Aliquam tristique augue vitae urna aliquet, et volutpat metus gravida. Mauris nec ornare nisl. Sed egestas mi et viverra sollicitudin. Fusce hendrerit adipiscing ipsum, ut suscipit nibh convallis fringilla. Mauris tempus id velit at lacinia. Aenean scelerisque ac sem in accumsan. </p>
+					<a class="readmore" href="#">Read more</a>		
+				</article><!--./art1-->
+		</div><!--./content-->
+		<aside id="sidebar">
+			<div class="block">
+				<h2>Top Sidebar</h2>
+				<p>
+					Donec eu diam quam sed fermentum elementum ultrices aliquam erat volutpat. In gravida nunc a metus sodales egestas. Morbi aliquet metus ultricies cursus elementum. 
+				</p>
+			</div><!--./side1-->
+			<div class="block">
+				<h2>Mid Sidebar</h2>
+				<p>
+					Vivamus arcu est quam sed fermentum elementum ultrices aliquam erat volutpat. Vestibulum dolor dolor, tincidunt vitae augue semper, semper gravida neque pellentesque eleifend.
+				</p>
+			</div><!--./side2-->
+			<div class="block">
+				<h2>Bottom Sidebar</h2>
+				<p>
+					Lorem ipsum dolor sit amet quam sed fermentum elementum ultrices aliquam erat volutpat. Proin porta ornare libero, eu aliquet tortor vestibulum sed.
+				</p>
+			</div><!--./side3-->
+		</aside>
+	</div><!--./main-->
+	<div class="clr"></div>
+	<footer>
+		<p>Copyright &copy; 2013 - techzz</p>
+	</footer>
+	</div><!--./container-->
+</body>
 </html>
